--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-paypal==2.0
 django-pictures==1.0.0
 django-stdimage==2.2.0
 easy-thumbnails==2.8.4
+gunicorn==20.1.0
 idna==3.4
 pagseguro==0.3.4
 pagseguro-python==0.37
