--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ autopep8==2.0.0
 beautifulsoup4==4.11.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
+dj-static==0.0.6
 Django==4.1.3
 django-bootstrap-v5==1.0.11
 django-paypal==2.0
@@ -16,6 +17,7 @@ pagseguro==0.3.4
 pagseguro-python==0.37
 Pillow==9.3.0
 progressbar2==4.2.0
+psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 python-dateutil==2.8.2
 python-utils==3.4.5
@@ -24,6 +26,7 @@ requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+static3==0.7.0
 tomli==2.0.1
 tzdata==2022.6
 urllib3==1.26.13
