--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ autopep8==2.0.0
 beautifulsoup4==4.11.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
+cloudinary==1.30.0
 dj-static==0.0.6
 Django==4.1.3
 django-bootstrap-v5==1.0.11
+django-cloudinary-storage==0.3.0
 django-paypal==2.0
 django-pictures==1.0.0
 django-stdimage==2.2.0
