--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-cloudinary-storage==0.3.0
 django-paypal==2.0
 django-pictures==1.0.0
 django-stdimage==2.2.0
+django-watson==1.6.2
 easy-thumbnails==2.8.4
 gunicorn==20.1.0
 idna==3.4
