--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.11.1
 certifi==2022.12.7
 charset-normalizer==2.1.1
 cloudinary==1.30.0
+dj-database-url==1.2.0
 dj-static==0.0.6
 Django==4.1.3
 django-bootstrap-v5==1.0.11
