--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ arrow==1.2.3
 asgiref==3.5.2
 autopep8==2.0.0
 beautifulsoup4==4.11.1
+Brotli==1.0.9
 certifi==2022.12.7
 charset-normalizer==2.1.1
 cloudinary==1.30.0
@@ -24,6 +25,7 @@ progressbar2==4.2.0
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 python-utils==3.4.5
 pytz==2022.7
 requests==2.28.1
@@ -37,4 +39,3 @@ urllib3==1.26.13
 voluptuous==0.13.1
 whitenoise==6.2.0
 xmltodict==0.13.0
-python-dotenv==0.21.0
